# lincolnlogs

./: Pipfile  pyproject.toml  setup.cfg
demo/: run.py
src/lincolnlogs/: __init__.py  build.py
tests/: test_expiring_logs.py  test_multiple_setups.py
tests/test_log_levels/: test_debug_log_level.py  test_info_log_level.py
tests/test_monkey_patches/: test_deprecated_monkey_patch.py  test_todo_monkey_patch.py
