[project]
name = "lincolnlogs"
version = "0.0.1"
authors = [
  { name="Doug McGeehan", email="doug@kmnr.org" },
]
description = "A handy logger for identifying message sources during development"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging"
]

[project.urls]
"Homepage" = "https://github.com/DrDougPhD/lincolnlogs"
"Bug Tracker" = "https://github.com/DrDougPhD/lincolnlogs/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
